# UPennContrast

./: .env  .eslintrc.cjs  .eslintrc.js  .gitignore  ONNX.md  README.md  TOOLS.md  components.d.ts  docker-compose-prod.yaml  docker-compose.yaml  docker.env  geo.lean.js  index.html  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js  vitest.config.js  vue.config.js
.github/workflows/: main.yaml  node.yaml  python.yaml  wasm.yaml
client/: package.json  tsconfig.json  vue.config.js
client/public/config/: modes.json
client/src/: App.vue  geojs.d.ts
client/src/components/: ContrastHistogram.vue  DisplayLayers.vue  GirderLocationChooser.vue  ImageViewer.vue  ServerStatus.vue  SwitchToggle.vue  ViewerToolbar.vue
client/src/girder/: components.ts  shims-girder.d.ts
client/src/layout/: BreadCrumbs.vue  Menu.vue  UserMenu.vue
client/src/plugins/: router.ts
client/src/store/: GirderAPI.ts  Persister.ts  constants.ts  images.ts  sync.ts
client/src/views/: index.ts
devops/: .env  Dockerfile  docker-compose.dev.yml  docker-compose.yml  girder.Dockerfile  worker.Dockerfile
devops/girder/: Dockerfile  girder.cfg  provision-prod.py  provision.py  test_env.sh
devops/girder-worker/: Dockerfile
devops/girder/annotation_client/: README.md  requirements.txt  setup.py
devops/provision/: girder_entrypoint_dev.sh  init_girder.py
itk/: CMakeLists.txt  README.md
itk/BlobToBlobThreshold/: CMakeLists.txt  main.cxx
itk/BlobToDotMax/: CMakeLists.txt  main.cxx  main2.cxx
itk/CircleToDotMax/: CMakeLists.txt  main.cxx
itk/EllipseToDotMax/: CMakeLists.txt  main.cxx
itk/MaskToBlob/: CMakeLists.txt  main.cxx
itk/Max/: CMakeLists.txt  main.cxx
itk/Threshold/: CMakeLists.txt  main.cxx
itk/web-build/BlobToBlobThreshold/: BlobToBlobThresholdWasm.js
itk/web-build/BlobToDotMax/: BlobToDotMaxWasm.js
itk/web-build/CircleToDotMax/: CircleToDotMaxWasm.js
patches/: d3+3.5.17.patch  mousetrap+1.6.5.patch
public/: index.html
public/config/: templates.json
public/onnx-models/sam/: README.md
server/: setup.py
server/girder_plugin/: __init__.py  client_webroot.py
src/: App.vue  geojs.d.ts  itk.d.ts  main.ts  registerServiceWorker.ts  shims-onnx.d.ts  shims-tsx.d.ts  shims-vue.d.ts  shims-vuex.d.ts  style.scss
src/components/: AddDatasetToCollection.vue  AlertDialog.vue  AnalyzePanel.vue  AnnotationActionPanel.vue  AnnotationContextMenu.vue  AnnotationViewer.vue  AnnotationWorkerMenu.vue  ChannelSelect.vue  ChatComponent.vue  CircleToDotMenu.vue  ColorPickerMenu.vue  ColorSelectionDialog.vue  ConfigurationSelect.vue  Contrast.vue  ContrastHistogram.vue  ContrastPanels.vue  CustomFileManager.vue  DisplayLayer.vue  DisplayLayerGroup.vue  DisplayLayerStaticPanel.vue  DisplayLayers.vue  DisplaySlice.vue  DockerImageSelect.vue  FileManagerOptions.vue  GirderLocationChooser.vue  HelloWorld.vue  HelpPanel.vue  HotkeyDescription.vue  HotkeySelection.vue  ImageOverview.vue  ImageViewer.vue  LayerInfoGrid.vue  LayerSelect.vue  Login.vue  NimbusTooltip.vue  PixelScaleBarSetting.vue  ProgressBarGroup.vue  PropertyWorkerMenu.vue  SamToolMenu.vue  ScaleSettings.vue  (+17 more)
src/components/AnnotationBrowser/: AnnotationActions.vue  AnnotationBrowser.vue  AnnotationCSVDialog.vue  AnnotationExport.vue  AnnotationFilters.vue  AnnotationIdFilters.vue  AnnotationImport.vue  (+8 more)
src/girder/: RestClientHelper.ts  components.ts  index.ts  shims-girder.d.ts
src/layout/: BreadCrumbs.vue  Menu.vue  UserMenu.vue  UserMenuLoginForm.vue
src/pipelines/: computePipeline.ts  onnxModels.ts  samPipeline.ts
src/plugins/: girder.ts  resize.ts  router.ts  vuetify.ts
src/store/: AnnotationsAPI.ts  ChatAPI.ts  GirderAPI.ts  ImageInfo.ts  PropertiesAPI.ts  UserAPI.ts  annotation.ts  chat.ts  constants.ts  filters.ts  girderResources.ts  images.ts  index.ts  jobs.ts  model.ts  progress.ts  properties.ts  properties.worker.ts  sync.ts  tool.ts
src/tools/: AnnotationConfiguration.vue  TagAndChannelRestriction.vue  TagAndLayerRestriction.vue  ToolConfiguration.vue  ToolCreation.vue  ToolEdition.vue  ToolIcon.vue  ToolPicker.vue  ToolSelection.vue  Toolset.vue  ToolsetPicker.vue
src/utils/: README.txt  annotation.ts  compositionModes.ts  conversion.ts  date.ts  debounce.ts  download.ts  fetch.ts  girderSelectable.ts  hotkeys.ts  itk.ts  lock.ts  log.ts  parsing.test.ts  parsing.ts  paths.ts  routeMapper.ts  screenshot.ts  setFrameQuad.d.ts  setFrameQuad.js  setFrameQuad.ts  v-description.ts  v-mousetrap.ts
src/views/: About.vue  DefaultRouterView.vue  Home.vue  Upload.vue  Viewer.vue  index.ts
test/scripts/: utilities.ts
(+96 files in other folders)
